[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary to produce a shared library for Python to import from.
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`)
# need the "rlib" or "lib" crate type also included:
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
temp_testdir = "0.2.3"